--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -42,13 +42,13 @@
     <i class="header-toggle d-xl-none bi bi-list"></i>
 
     <div class="profile-img">
-      <img src="assets/img/my-profile-img.jpg" alt="" class="img-fluid rounded-circle">
+      <img src="https://avatars.githubusercontent.com/u/55669204?s=400&u=46c9449266ea119c06c1ba83120f63669a069c23&v=4" alt="" class="img-fluid rounded-circle">
     </div>
 
     <a href="index.html" class="logo d-flex align-items-center justify-content-center">
       <!-- Uncomment the line below if you also wish to use an image logo -->
       <!-- <img src="assets/img/logo.png" alt=""> -->
-      <h1 class="sitename">Alex Smith</h1>
+      <h1 class="sitename">Tanvir Hasan</h1>
     </a>
 
     <div class="social-links text-center">
