--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Index - iPortfolio Bootstrap Template</title>
+  <title>T@nvir</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -42,22 +42,32 @@
     <i class="header-toggle d-xl-none bi bi-list"></i>
 
     <div class="profile-img">
-      <img src="assets/img/my-profile-img.jpg" alt="" class="img-fluid rounded-circle">
+      <img src="https://avatars.githubusercontent.com/u/55669204?s=400&u=46c9449266ea119c06c1ba83120f63669a069c23&v=4" alt="" class="img-fluid rounded-circle">
     </div>
 
     <a href="index.html" class="logo d-flex align-items-center justify-content-center">
       <!-- Uncomment the line below if you also wish to use an image logo -->
       <!-- <img src="assets/img/logo.png" alt=""> -->
-      <h1 class="sitename">Alex Smith</h1>
+      <h1 class="sitename">Tanvir Hasan</h1>
     </a>
 
     <div class="social-links text-center">
-      <a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a>
-      <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-      <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-      <a href="#" class="google-plus"><i class="bi bi-skype"></i></a>
-      <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
-    </div>
+  <!-- Email -->
+  <a href="mailto:u1604090@student.cuet.ac.bd.com" class="email"><i class="bi bi-envelope"></i></a>
+  
+  <!-- GitHub -->
+  <a href="https://github.com/mississippii" class="github"><i class="bi bi-github"></i></a>
+  
+  <!-- LinkedIn -->
+  <a href="https://www.linkedin.com/in/hasantanvir313" class="linkedin"><i class="bi bi-linkedin"></i></a>
+  
+  <!-- Facebook -->
+  <a href="https://www.facebook.com/godfather.cf" class="facebook"><i class="bi bi-facebook"></i></a>
+  
+  <!-- Twitter -->
+  <a href="https://twitter.com/hasantanvir313" class="twitter"><i class="bi bi-twitter"></i></a>
+</div>
+
 
     <nav id="navmenu" class="navmenu">
       <ul>
@@ -94,10 +104,10 @@
     <!-- Hero Section -->
     <section id="hero" class="hero section dark-background">
 
-      <img src="assets/img/hero-bg.jpg" alt="" data-aos="fade-in" class="">
+      <img src="assets/img/background.jpg" alt="" data-aos="fade-in" class="">
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
-        <h2>Alex Smith</h2>
+        <h2>Tanvir Hasan</h2>
         <p>I'm <span class="typed" data-typed-items="Designer, Developer, Freelancer, Photographer">Designer</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
       </div>
 
@@ -116,7 +126,7 @@
 
         <div class="row gy-4 justify-content-center">
           <div class="col-lg-4">
-            <img src="assets/img/my-profile-img.jpg" class="img-fluid" alt="">
+            <img src="https://avatars.githubusercontent.com/u/55669204?s=400&u=46c9449266ea119c06c1ba83120f63669a069c23&v=4" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 content">
             <h2>UI/UX Designer &amp; Web Developer.</h2>
