--- a/index.html
+++ b/index.html
@@ -55,12 +55,11 @@
                 </h1>
                 <p class="hero-subtitle">Software Engineer</p>
                 <p class="hero-description">
-                    I specialize in distributed computing, machine learning, and building scalable backend systems. 
-                    Currently working on fault-tolerant streaming systems and microservices architecture.
+                    Software Engineer experienced in building scalable microservices and distributed systems. Skilled in Java, Spring Boot, Docker, and cloud/containerization. Passionate about designing reliable, high-performance backend solutions.
                 </p>
                 <div class="hero-buttons">
                     <a href="#projects" class="btn btn-primary">View My Work</a>
-                    <a href="#resume" class="btn btn-outline">Download CV</a>
+                    <a href="assets/img/CV_Tanvir.pdf" class="btn btn-outline">Download CV</a>
                 </div>
             </div>
             <div class="profile-img-container">
@@ -83,12 +82,9 @@
                         I'm a Software Engineer at Telcobright Ltd. with expertise in distributed systems, stream processing, 
                         and microservices architecture. I graduated from Chittagong University of Engineering & Technology 
                         with a degree in Computer Science & Engineering.
-                    </p>
                     <p>
-                        My research interests include distributed computing, machine learning, deep learning, and signal processing. 
-                        I have hands-on experience with Apache Kafka, Apache Flink, Spring Boot, and building fault-tolerant systems 
-                        that ensure 100% data integrity and reliability.
-                    </p>
+                        As a Software Engineer, I design and build scalable microservices and distributed systems, focusing on reliability and performance in real-world environments. My professional work is grounded in a strong academic background from CUET, where I mastered core computer science concepts and honed my problem-solving skills through competitive programming and active campus involvement.
+                
                     <div class="about-stats">
                         <div class="stat">
                             <h3>1500+</h3>
@@ -140,6 +136,7 @@
                     <h3>Tools & Technologies</h3>
                     <div class="skill-items">
                         <span class="skill-item">Docker</span>
+                        <span class="skill-item">LXD</span>
                         <span class="skill-item">Microservices</span>
                         <span class="skill-item">REST APIs</span>
                         <span class="skill-item">WebSocket</span>
@@ -156,28 +153,40 @@
         <div class="container">
             <h2 class="section-title">Experience</h2>
             <div class="resume-content">
-                <div class="resume-item">
-                    <div class="resume-header">
-                        <h3>Professional Experience</h3>
+                <div class="experience-tree">
+                    <div class="tree-branch">
+                        <div class="tree-dot"></div>
+                        <div class="tree-content">
+                            <h4>Software Engineer</h4>
+                            <span class="resume-date">Apr 2023 – Present</span>
+                            <p class="resume-institution">Telcobright Ltd.</p>
+                            <ul class="resume-achievements">
+                                <li>Worked to design and develop a fault-tolerant distributed stream processing system from the ground up</li>
+                                <li>Implemented exactly-once processing semantics for critical data pipelines using Apache Flink and Kafka, ensuring 100% data integrity and reliability</li>
+                                <li>Built a microservices-based backend with Java and Spring Boot, with REST APIs, JPA/Hibernate, gRPC, Kafka</li>
+                                <li>Implemented security, authentication, and API routing patterns using Spring Security and Gateway</li>
+                                <li>Applied software design patterns for scalable and maintainable systems across multiple projects</li>
+                                <li>Assisted in designing a system with database replication, containerization, and FTP server integration</li>
+                            </ul>
+                            <p class="resume-tech"><strong>Technology Used:</strong> Java, Spring Boot, Quarkus, Apache Kafka, Apache Flink, gRPC, Docker, JPA/Hibernate</p>
+                        </div>
                     </div>
-                    <div class="resume-details">
-                        <h4>Software Engineer</h4>
-                        <span class="resume-date">Apr 2023 - Present</span>
-                        <p class="resume-institution">Telcobright Ltd.</p>
-                        <ul class="resume-achievements">
-                            <li>Designed and developed a fault-tolerant distributed stream processing system from the ground up</li>
-                            <li>Implemented exactly-once processing semantics for critical data pipelines using Apache Flink and Kafka</li>
-                            <li>Built microservices-based backend with Java and Spring Boot, REST APIs, JPA/Hibernate, gRPC</li>
-                            <li>Implemented security, authentication, and API routing patterns using Spring Security and Gateway</li>
-                        </ul>
+                    <div class="tree-connector"></div>
+                    <div class="tree-branch">
+                        <div class="tree-dot"></div>
+                        <div class="tree-content">
+                            <h4>Software Engineering Intern</h4>
+                            <span class="resume-date">Jan 2022 – Mar 2022</span>
+                            <p class="resume-institution">BJIT Ltd.</p>
+                            <ul class="resume-achievements">
+                                <li>Developed and integrated RESTful APIs using Spring Boot to handle HTTP requests and perform CRUD operations</li>
+                                <li>Used Postman for comprehensive API testing, ensuring endpoint reliability and data accuracy</li>
+                                <li>Built front-end components to dynamically retrieve and display data from a back-end database, creating a seamless user experience</li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
 
-                <div class="resume-download">
-                    <a href="#" class="btn btn-primary">
-                        <i class="fas fa-download"></i> Download Full CV
-                    </a>
-                </div>
             </div>
         </div>
     </section>
@@ -192,6 +201,7 @@
                         <h4>B.Sc. in Computer Science & Engineering</h4>
                         <span class="resume-date">2017 - 2022</span>
                         <p class="resume-institution">Chittagong University of Engineering & Technology (CUET)</p>
+                        <p class="resume-gpa">CGPA: 2.90/4.0</p>
                         <!-- <p class="resume-thesis"><strong>Academic Thesis:</strong> A Comparative Study of Machine Learning and Deep Learning Models for EEG-Based Seizure Detection</p> -->
                     </div>
                 </div>
@@ -222,59 +232,45 @@
         <div class="container">
             <h2 class="section-title">Featured Projects</h2>
             <div class="projects-grid">
+                <!-- Real-Time Distributed Messaging System -->
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="https://images.unsplash.com/photo-1531403009284-440f080d1e12?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1770&q=80" alt="Real-Time Messaging System">
+                        <img src="assets/img/project-messaging.jpg" alt="Real-Time Distributed Messaging System">
                         <div class="project-overlay">
-                            <a href="https://github.com/mississippii/Gorib-er-Messenger" class="project-link"><i class="fas fa-external-link-alt"></i></a>
-                            <a href="https://github.com/mississippii/Gorib-er-Messenger" class="project-link"><i class="fab fa-github"></i></a>
+                            <a href="https://github.com/mississippii/Gorib-er-Messenger" class="project-link" target="_blank">Repository <i class="fab fa-github"></i></a>
                         </div>
                     </div>
                     <div class="project-content">
-                        <h3>Real-Time Messaging System</h3>
-                        <p>Designed a server to handle real-time messaging with WebSocket and Kafka topics using multithreading for high performance</p>
-                        <div class="project-tech">
-                            <span>WebSocket</span>
-                            <span>Kafka</span>
-                            <span>Apache Flink</span>
-                        </div>
+                        <h3>Real-Time Distributed Messaging System</h3>
+                        <p>High-performance real-time messaging server with multithreading, WebSocket, Kafka, and Flink for exactly-once delivery.</p>
                     </div>
                 </div>
 
+                <!-- Online Voting System for University Elections -->
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="https://images.unsplash.com/photo-1454165804606-c3d57bc86b40?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1770&q=80" alt="Microservices Architecture">
+                        <img src="assets/img/project-voting.jpg" alt="Online Voting System for University Elections">
                         <div class="project-overlay">
-                            <a href="https://github.com/mississippii/microserviceArchitecture" class="project-link"><i class="fas fa-external-link-alt"></i></a>
-                            <a href="https://github.com/mississippii/microserviceArchitecture" class="project-link"><i class="fab fa-github"></i></a>
+                            <a href="https://github.com/mississippii/microserviceArchitecture" class="project-link" target="_blank">Repository <i class="fab fa-github"></i></a>
                         </div>
                     </div>
                     <div class="project-content">
-                        <h3>Microservices Architecture</h3>
-                        <p>College Alumni platform backend with Spring Boot microservices architecture for scalability and maintainability</p>
-                        <div class="project-tech">
-                            <span>Spring Boot</span>
-                            <span>JPA Hibernate</span>
-                            <span>REST APIs</span>
-                        </div>
+                        <h3>Online Voting System for University Elections</h3>
+                        <p>Secure online voting platform with Spring Boot microservices, MySQL, and a React frontend for fair university elections.</p>
                     </div>
                 </div>
 
+                <!-- Reactive Website for a Stock Brokerage Firm -->
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="https://images.unsplash.com/photo-1460925895917-afdab827c52f?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1715&q=80" alt="Consultancy Website">
+                        <img src="assets/img/project-brokerage.jpg" alt="Reactive Website for a Stock Brokerage Firm">
                         <div class="project-overlay">
-                            <a href="http://www.simclbd.com/" class="project-link"><i class="fas fa-external-link-alt"></i></a>
+                            <a href="http://www.simclbd.com/" class="project-link" target="_blank">Simclbd.com <i class="fas fa-external-link-alt"></i></a>
                         </div>
                     </div>
                     <div class="project-content">
-                        <h3>Consultancy Firm Website</h3>
-                        <p>Developed a reactive consultancy firm website using React, showcasing modern front-end development techniques</p>
-                        <div class="project-tech">
-                            <span>React</span>
-                            <span>JavaScript</span>
-                            <span>CSS3</span>
-                        </div>
+                        <h3>Reactive Website for a Stock Brokerage Firm</h3>
+                        <p>Consultancy firm website built with React, focusing on modern front-end techniques and clean design.</p>
                     </div>
                 </div>
             </div>
@@ -309,7 +305,7 @@
         <div class="container">
             <h2 class="section-title">Hobbies & Interests</h2>
             <p class="hobbies-intro">
-                When I'm not coding, I enjoy exploring new technologies, reading research papers on distributed systems, 
+                When I'm not coding, I enjoy exploring new technologies, reading books, 
                 and contributing to open-source projects. I'm also passionate about drawing and sketching, which helps me 
                 maintain a creative perspective in my technical work.
             </p>
@@ -402,7 +398,7 @@
             <div class="footer-col">
                 <h4>Contact Info</h4>
                 <ul class="footer-contact-info">
-                    <li><i class="fas fa-envelope"></i> u1604090@student.cuet.ac.bd</li>
+                    <li><i class="fas fa-envelope"></i> tanvir.hasan0390@gmail.com</li>
                     <li><i class="fas fa-map-marker-alt"></i> Dhaka, Bangladesh</li>
                 </ul>
             </div>
