--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                         <span class="skill-item">Java</span>
                         <span class="skill-item">Spring Boot</span>
                         <span class="skill-item">Quarkus</span>
-                        <span class="skill-item">Apache Kafka</span>
+                        <span class="skill-item">Kafka</span>
                         <span class="skill-item">Apache Flink</span>
                         <span class="skill-item">gRPC</span>
                         <span class="skill-item">JPA/Hibernate</span>
@@ -161,14 +161,14 @@
                             <span class="resume-date">Apr 2023 – Present</span>
                             <p class="resume-institution">Telcobright Ltd.</p>
                             <ul class="resume-achievements">
-                                <li>Worked to design and develop a fault-tolerant distributed stream processing system from the ground up</li>
-                                <li>Implemented exactly-once processing semantics for critical data pipelines using Apache Flink and Kafka, ensuring 100% data integrity and reliability</li>
-                                <li>Built a microservices-based backend with Java and Spring Boot, with REST APIs, JPA/Hibernate, gRPC, Kafka</li>
-                                <li>Implemented security, authentication, and API routing patterns using Spring Security and Gateway</li>
-                                <li>Applied software design patterns for scalable and maintainable systems across multiple projects</li>
-                                <li>Assisted in designing a system with database replication, containerization, and FTP server integration</li>
+                                <li>Designed and developed a fault-tolerant distributed stream processing system from scratch, handling real-time data ingestion and processing at scale</li>
+                                <li>Built and maintained microservices-based backend systems using Java, Spring Boot, and Quarkus, implementing REST APIs, gRPC services, and JPA/Hibernate for data persistence</li>
+                                <li>Established security infrastructure with Spring Security and API Gateway, implementing authentication, authorization, and API routing patterns for secure inter-service communication</li>
+                                <li>Applied software design patterns and best practices to deliver scalable, maintainable, and production-ready systems across multiple projects</li>
+                                <li>Monitored and optimized system performance in production environments, identifying and resolving vulnerabilities to ensure high availability and reliability</li>
+                                <li>Designed and deployed cloud infrastructure using AWS EC2, Docker, database replication strategies, and automated CI/CD pipelines with Terraform and Ansible for continuous deployment</li>
                             </ul>
-                            <p class="resume-tech"><strong>Technology Used:</strong> Java, Spring Boot, Quarkus, Apache Kafka, Apache Flink, gRPC, Docker, JPA/Hibernate</p>
+                            <!-- <p class="resume-tech"><strong>Technology Used:</strong> Java, Spring Boot, Quarkus, Kafka, Apache Flink, gRPC, Docker, JPA/Hibernate</p> -->
                         </div>
                     </div>
                     <div class="tree-connector"></div>
@@ -179,9 +179,9 @@
                             <span class="resume-date">Jan 2022 – Mar 2022</span>
                             <p class="resume-institution">BJIT Ltd.</p>
                             <ul class="resume-achievements">
-                                <li>Developed and integrated RESTful APIs using Spring Boot to handle HTTP requests and perform CRUD operations</li>
-                                <li>Used Postman for comprehensive API testing, ensuring endpoint reliability and data accuracy</li>
-                                <li>Built front-end components to dynamically retrieve and display data from a back-end database, creating a seamless user experience</li>
+                                <li>Developed and integrated RESTful APIs using Spring Boot to handle HTTP requests and perform CRUD operations on backend databases</li>
+                                <li>Conducted comprehensive API testing using Postman to validate endpoint functionality, ensure data accuracy, and verify request-response cycles</li>
+                                <li>Built responsive front-end components to dynamically fetch and display data from backend services, delivering a seamless user experience</li>
                             </ul>
                         </div>
                     </div>
@@ -399,6 +399,7 @@
                 <h4>Contact Info</h4>
                 <ul class="footer-contact-info">
                     <li><i class="fas fa-envelope"></i> tanvir.hasan0390@gmail.com</li>
+                    <li><i class="fas fa-envelope"></i> u1604090@student.cuet.ac.bd</li>
                     <li><i class="fas fa-map-marker-alt"></i> Dhaka, Bangladesh</li>
                 </ul>
             </div>
