--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/png" href="assets/img/favicon.png">
     <link rel="manifest" href="manifest.json">
     <!-- Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700&family=Playfair+Display:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <!-- Styles -->
     <link rel="stylesheet" href="assets/css/main.css">
@@ -289,7 +289,7 @@
             <div class="timeline">
                 <div class="timeline-item">
                     <div class="timeline-content">
-                        <h4>B.Sc. in Computer Science & Engineering</h4>
+                        <h4>B.Sc. in Computer Science and Engineering</h4>
                         <span class="resume-date">2017 - 2022</span>
                         <p class="resume-institution">Chittagong University of Engineering & Technology (CUET)</p>
                         <p class="resume-gpa">CGPA: 2.90/4.0</p>
@@ -404,7 +404,7 @@
     <!-- Hobbies Section -->
     <section id="hobby" class="hobbies">
         <div class="container">
-            <h2 class="section-title">Hobbies & Interests</h2>
+            <h2 class="section-title">Hobbies and Interests</h2>
             <p class="hobbies-intro">
                 When I'm not coding, I enjoy exploring new technologies, reading books, 
                 and contributing to open-source projects. I'm also passionate about drawing and sketching, which helps me 
@@ -481,7 +481,7 @@
             <div class="footer-col">
                 <h4>Social Link</h4>
                 <div class="footer-social">
-                    <a href="https://github.com/mississippii"><i class="fab fa-github"></i></a>
+                    <a href="https://www.facebook.com/godfather.cf" target="_blank" rel="noopener"><i class="fab fa-facebook-f"></i></a>
                     <a href="https://www.linkedin.com/in/hasantanvir/"><i class="fab fa-linkedin"></i></a>
                     <a href="https://twitter.com/hasantanvir313"><i class="fab fa-twitter"></i></a>
                 </div>
@@ -499,8 +499,20 @@
             <div class="footer-col">
                 <h4>Contact Info</h4>
                 <ul class="footer-contact-info">
-                    <li><i class="fas fa-envelope"></i> tanvir.hasan0390@gmail.com</li>
-                    <li><i class="fas fa-envelope"></i> u1604090@student.cuet.ac.bd</li>
+                    <li>
+                        <i class="fas fa-envelope"></i>
+                        <div class="mail-block">
+                            <span class="mail-label">Primary</span>
+                            <a href="mailto:tanvir.hasan0390@gmail.com">tanvir.hasan0390@gmail.com</a>
+                        </div>
+                    </li>
+                    <li>
+                        <i class="fas fa-envelope"></i>
+                        <div class="mail-block">
+                            <span class="mail-label">Alternate</span>
+                            <a href="mailto:u1604090@student.cuet.ac.bd">u1604090@student.cuet.ac.bd</a>
+                        </div>
+                    </li>
                     <li><i class="fas fa-map-marker-alt"></i> Dhaka, Bangladesh</li>
                 </ul>
             </div>
