--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 </div>
             </div>
             <div class="hero-figure">
-                <img src="assets/img/tanvir.jpeg" alt="Tanvir Hasan" class="profile-img">
+                <img src="assets/img/tanvir2.jpeg" alt="Tanvir Hasan" class="profile-img">
             </div>
         </div>
     </section>
@@ -125,7 +125,7 @@
                         <span class="suite-icon"><i class="fas fa-server"></i></span>
                         <div>
                             <p class="suite-eyebrow">Backend systems</p>
-                            <h3>Distributed Services</h3>
+                            <h3>MicroServices</h3>
                         </div>
                     </div>
                     <p class="suite-text">JVM-first services sized for telecom workloads with battle-tested contracts.</p>
@@ -135,6 +135,7 @@
                             <div class="suite-tags">
                                 <span>Java</span>
                                 <span>C/C++</span>
+                                <span>C#</span>
                                 <span>Spring Boot</span>
                                 <span>Quarkus</span>
                             </div>
@@ -150,12 +151,10 @@
                             </div>
                         </div>
                         <div class="suite-group">
-                            <span class="suite-group-title">Data Layers</span>
+                            <span class="suite-group-title">Database</span>
                             <div class="suite-tags">
-                                <span>PostgreSQL</span>
+                                <span>MySQL</span>
                                 <span>Redis</span>
-                                <span>JPA/Hibernate</span>
-                                <span>Event sourcing</span>
                             </div>
                         </div>
                     </div>
@@ -185,7 +184,6 @@
                             <div class="suite-tags">
                                 <span>EEG preprocessing</span>
                                 <span>Band-pass filtering</span>
-                                <span>Feature extraction</span>
                             </div>
                         </div>
                         <div class="suite-group">
@@ -193,7 +191,6 @@
                             <div class="suite-tags">
                                 <span>CNN</span>
                                 <span>RNN/LSTM</span>
-                                <span>Attention pipelines</span>
                             </div>
                         </div>
                     </div>
@@ -204,7 +201,7 @@
                         <span class="suite-icon"><i class="fas fa-cloud"></i></span>
                         <div>
                             <p class="suite-eyebrow">Cloud & ops</p>
-                            <h3>Delivery & Reliability</h3>
+                            <h3>Delivery and Reliability</h3>
                         </div>
                     </div>
                     <p class="suite-text">Infrastructure-as-code, observability, and calm release habits.</p>
@@ -330,7 +327,7 @@
                 <article class="dossier">
                     <div class="dossier-meta">
                         <span class="dossier-label">Messaging infrastructure</span>
-                        <span class="dossier-year">2023</span>
+                        <span class="dossier-year">2024</span>
                     </div>
                     <div class="dossier-body">
                         <h3>Real-Time Distributed Messaging System</h3>
@@ -345,8 +342,8 @@
 
                 <article class="dossier">
                     <div class="dossier-meta">
-                        <span class="dossier-label">Civic systems</span>
-                        <span class="dossier-year">2022</span>
+                        <span class="dossier-label">Voting  systems</span>
+                        <span class="dossier-year">2025</span>
                     </div>
                     <div class="dossier-body">
                         <h3>Online Voting System for University Elections</h3>
@@ -361,27 +358,27 @@
 
                 <article class="dossier">
                     <div class="dossier-meta">
-                        <span class="dossier-label">Financial web estate</span>
-                        <span class="dossier-year">2021</span>
+                        <span class="dossier-label">Event Socket Library</span>
+                        <span class="dossier-year">2023</span>
                     </div>
                     <div class="dossier-body">
-                        <h3>Reactive Website for a Stock Brokerage Firm</h3>
-                        <p>Led the rebuild of a brokerage-facing site with attention to editorial tone, accessibility, and lighthouse performance.</p>
+                        <h3>FreeSWITCH Event Socket Integration (ESL Client)</h3>
+                        <p>Engineered a real-time call control and monitoring service by integrating FreeSWITCH with a Spring Boot backend via the Event Socket Library.</p>
                         <ul class="dossier-notes">
-                            <li>Outcome: <strong>+31%</strong> conversion lift, 92/100 Lighthouse performance.</li>
-                            <li>Stack: React, TypeScript, Tailwind, static hosting.</li>
+                            <li>Features: inbound/outbound call routing, live event processing, REST-driven call actions.</li>
+                            <li>Stack: Spring Boot, FreeSWITCH ESL, Docker, Microservices.</li>
                         </ul>
-                        <a href="http://www.simclbd.com/" class="dossier-link" target="_blank" rel="noopener">Simclbd.com</a>
+                         <a href="https://github.com/mississippii/EslClient_SpringBoot" class="dossier-link" target="_blank" rel="noopener">Repository</a>
                     </div>
                 </article>
             </div>
         </div>
     </section>
 
-    <!-- Accomplishments Section -->
+    <!-- Certifications Section -->
     <section id="accomplishments" class="resume">
         <div class="container">
-            <h2 class="section-title">Accomplishments</h2>
+            <h2 class="section-title">Certifications</h2>
             <div class="resume-content">
                 <div class="resume-item">
                     <div class="resume-header">
@@ -404,7 +401,7 @@
     <!-- Hobbies Section -->
     <section id="hobby" class="hobbies">
         <div class="container">
-            <h2 class="section-title">Hobbies and Interests</h2>
+            <h2 class="section-title">Hobbies</h2>
             <p class="hobbies-intro">
                 When I'm not coding, I enjoy exploring new technologies, reading books, 
                 and contributing to open-source projects. I'm also passionate about drawing and sketching, which helps me 
