--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/png" href="assets/img/favicon.png">
     <link rel="manifest" href="manifest.json">
     <!-- Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700&family=Playfair+Display:wght@400;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700&amp;family=Playfair+Display:wght@400;600;700&amp;display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <!-- Styles -->
     <link rel="stylesheet" href="assets/css/main.css">
@@ -86,10 +86,12 @@
                 <div class="about-text">
                     <p>
                         I'm a Software Engineer at Telcobright Ltd. with expertise in distributed systems, stream processing, 
-                        and microservices architecture. I graduated from Chittagong University of Engineering & Technology 
-                        with a degree in Computer Science & Engineering.
+                        and microservices architecture. I graduated from Chittagong University of Engineering &amp; Technology 
+                        with a degree in Computer Science &amp; Engineering.
+                    </p>
                     <p>
                         As a Software Engineer, I design and build scalable microservices and distributed systems, focusing on reliability and performance in real-world environments. My professional work is grounded in a strong academic background from CUET, where I mastered core computer science concepts and honed my problem-solving skills through competitive programming and active campus involvement.
+                    </p>
                 
                     <div class="about-stats">
                         <div class="stat">
@@ -114,7 +116,7 @@
     <section id="skills" class="skills">
         <div class="container">
             <div class="section-heading section-heading-left">
-                <p class="section-eyebrow">Tools & Technologies</p>
+                <p class="section-eyebrow">Tools &amp; Technologies</p>
                 <h2 class="section-title">What I build with</h2>
                 <p class="section-summary">A cross-disciplinary toolkit grounded in backend rigor, applied research, and operational discipline.</p>
             </div>
@@ -131,7 +133,7 @@
                     <p class="suite-text">JVM-first services sized for telecom workloads with battle-tested contracts.</p>
                     <div class="suite-grid">
                         <div class="suite-group">
-                            <span class="suite-group-title">Languages & Frameworks</span>
+                            <span class="suite-group-title">Languages &amp; Frameworks</span>
                             <div class="suite-tags">
                                 <span>Java</span>
                                 <span>C/C++</span>
@@ -141,7 +143,7 @@
                             </div>
                         </div>
                         <div class="suite-group">
-                            <span class="suite-group-title">Messaging & Protocols</span>
+                            <span class="suite-group-title">Messaging &amp; Protocols</span>
                             <div class="suite-tags">
                                 <span>Kafka</span>
                                 <span>Apache Flink</span>
@@ -200,7 +202,7 @@
                     <div class="suite-head">
                         <span class="suite-icon"><i class="fas fa-cloud"></i></span>
                         <div>
-                            <p class="suite-eyebrow">Cloud & ops</p>
+                            <p class="suite-eyebrow">Cloud &amp; ops</p>
                             <h3>Delivery and Reliability</h3>
                         </div>
                     </div>
@@ -216,7 +218,7 @@
                             </div>
                         </div>
                         <div class="suite-group">
-                            <span class="suite-group-title">CI/CD & Automation</span>
+                            <span class="suite-group-title">CI/CD &amp; Automation</span>
                             <div class="suite-tags">
                                 <span>GitHub Actions</span>
                                 <span>GitLab CI</span>
@@ -288,7 +290,7 @@
                     <div class="timeline-content">
                         <h4>B.Sc. in Computer Science and Engineering</h4>
                         <span class="resume-date">2017 - 2022</span>
-                        <p class="resume-institution">Chittagong University of Engineering & Technology (CUET)</p>
+                        <p class="resume-institution">Chittagong University of Engineering &amp; Technology (CUET)</p>
                         <p class="resume-gpa">CGPA: 2.90/4.0</p>
                         <!-- <p class="resume-thesis"><strong>Academic Thesis:</strong> A Comparative Study of Machine Learning and Deep Learning Models for EEG-Based Seizure Detection</p> -->
                     </div>
@@ -298,7 +300,7 @@
                     <div class="timeline-content">
                         <h4>Higher Secondary School Certificate</h4>
                         <span class="resume-date">2014-2016</span>
-                        <p class="resume-institution">Sonar Bangla College & University</p>
+                        <p class="resume-institution">Sonar Bangla College &amp; University</p>
                         <p class="resume-gpa">GPA: 5.0/5.0</p>
                     </div>
                 </div>
@@ -342,7 +344,7 @@
 
                 <article class="dossier">
                     <div class="dossier-meta">
-                        <span class="dossier-label">Voting  systems</span>
+                        <span class="dossier-label">Voting Systems</span>
                         <span class="dossier-year">2025</span>
                     </div>
                     <div class="dossier-body">
