--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
                         <h3>Real-Time Distributed Messaging System</h3>
                         <p>Designed a Kafka + Flink backbone that guarantees exactly-once delivery for university-scale cohorts, pairing JVM tuning with thoughtful stream semantics.</p>
                         <ul class="dossier-notes">
-                            <li>Outcome: <strong>1.8M msg/s</strong> sustained throughput, <strong>sub-90ms</strong> delivery.</li>
+                            <!-- <li>Outcome: <strong>1.8M msg/s</strong> sustained throughput, <strong>sub-90ms</strong> delivery.</li> -->
                             <li>Stack: Spring Boot, WebSocket fan-out, Kafka, Apache Flink, Redis.</li>
                         </ul>
                         <a href="https://github.com/mississippii/Gorib-er-Messenger" class="dossier-link" target="_blank" rel="noopener">Repository</a>
@@ -351,7 +351,7 @@
                         <h3>Online Voting System for University Elections</h3>
                         <p>Authored a microservice ensemble with auditable tallies, immutable logging, and guarded APIs for six faculties.</p>
                         <ul class="dossier-notes">
-                            <li>Outcome: <strong>zero</strong> duplicate ballots, 99.9% availability during polling.</li>
+                            <!-- <li>Outcome: <strong>zero</strong> duplicate ballots, 99.9% availability during polling.</li> -->
                             <li>Stack: Spring Boot, MySQL, Docker, React admin console.</li>
                         </ul>
                         <a href="https://github.com/mississippii/microserviceArchitecture" class="dossier-link" target="_blank" rel="noopener">Repository</a>
@@ -367,7 +367,7 @@
                         <h3>FreeSWITCH Event Socket Integration (ESL Client)</h3>
                         <p>Engineered a real-time call control and monitoring service by integrating FreeSWITCH with a Spring Boot backend via the Event Socket Library.</p>
                         <ul class="dossier-notes">
-                            <li>Features: inbound/outbound call routing, live event processing, REST-driven call actions.</li>
+                            <!-- <li>Features: inbound/outbound call routing, live event processing, REST-driven call actions.</li> -->
                             <li>Stack: Spring Boot, FreeSWITCH ESL, Docker, Microservices.</li>
                         </ul>
                          <a href="https://github.com/mississippii/EslClient_SpringBoot" class="dossier-link" target="_blank" rel="noopener">Repository</a>
